[package]
name = "fedisea-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "r2d2"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio", "tls-rustls" ] }
