[package]
name = "fedisea-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
jemallocator = "0.5.4"
tokio = { version = "1", features = ["full"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager", "r2d2"] }
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio", "tls-rustls", "json" ] }
dotenvy = "0.15"
robotxt = "0.6.1"
thiserror = "2.0.18"
serde_json = "1.0.149"
futures = "0.3.32"
maxminddb = { version = "0.27.3", features = ["mmap", "simdutf8"] }
hickory-resolver = { version = "0.25.2" }